<resources>
    <string name="app_name">ElectroVerse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="electroverse">ElectroVerse</string>
    <string name="product_image">Product Image</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product price</string>
    <string name="products">Products</string>
    <string name="product_description">Product description</string>
    <string name="details">Details</string>
    <string name="get_started">Get started</string>
    <string name="welcome_to_n_khan">WELCOME TO \n KHAN</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="home">Home</string>
    <string name="all_products">All Products</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_icon">Search Icon</string>
    <string name="ad">AD</string>
    <string name="good_afternoon">Good afternoon👋🏽</string>
    <string name="ada_dennis">Ada Dennis</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="athletic_sportswear">Athletic/Sportswear</string>
    <string name="qty_sold">4.5(100 sold)</string>
    <string name="old_price">Old Price</string>
    <string name="our_special_offers">Our Special Offers</string>
    <string name="featured_shoes">Featured Shoes</string>
    <string name="_100_sold">100 sold</string>
    <string name="review_qty">4.5 (32 reviews)</string>
    <string name="size">Size</string>
    <string name="colours">Colours</string>
    <string name="quantity">Quantity</string>
    <string name="one">1</string>
    <string name="more_from_khan">More from Khan</string>
    <string name="total_price">Total price</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="order_list">Order list</string>
    <string name="edit">Edit</string>
    <string name="personal_information">Personal information</string>
    <string name="delivery_option">Delivery option</string>
    <string name="price_summary">Price summary</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="featured_products">Featured Products</string>
    <string name="you_might_also_like">You might also like</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="select_a_payment_option">Select a payment option</string>
    <string name="add_a_new_card">Add a new Card</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_text">You have successfully placed an order. Details of your order has been sent to your email.</string>
    <string name="okay">Okay</string>
    <string name="wish_list_txt">You have not added any item to your wish list</string>
    <string name="discover_products">Discover products</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="all_orders">All orders</string>
    <string name="my_orders">My Orders</string>
    <string name="no_order">No completed order yet</string>
    <string name="no_item">No item added to cart yet</string>
    <string name="price_format">\$%.2f</string>
</resources>