<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.WishListFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_wishlist"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


    </Toolbar>

    <ImageView
        android:id="@+id/wishlist_placeholder_ic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        android:src="@drawable/wish_list_placeholder_ic" />

    <TextView
        android:id="@+id/wish_list_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wish_list_txt" />

    <Button
        android:id="@+id/discover_products_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/button_background"
        android:text="@string/discover_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wish_list_recyclerview"
        tools:listitem="@layout/featured_shoes_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>