<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:elevation="4dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/forum_84_camp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_margin="12dp"
            android:id="@+id/product_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxEms="10"
            android:textColor="@color/black"
            android:text="@string/product_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_image"/>


        <TextView
            android:id="@+id/qty_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintStart_toEndOf="@id/product_image"
            app:layout_constraintTop_toTopOf="@id/product_image"
            app:layout_constraintBottom_toBottomOf="@id/product_image"
            android:background="@color/lighter_gray"
            android:paddingHorizontal="4dp"
            android:text="@string/one" />



        <TextView
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/qty_count"
            app:layout_constraintTop_toTopOf="@id/qty_count"
            app:layout_constraintStart_toEndOf="@id/qty_count"
            android:layout_margin="12dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>